--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "deletescript",
   "version": "1.0.0",
   "description": "",
-  "main": "api.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "netlify deploy --prod"
