--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "netlify deploy --prod"
+    "build": "netlify deploy --prod",
 
+    "start": "node netlify\\functions\\api.js"
    
   },
   "keywords": [],
